# ImSound

./: CMakeLists.txt  DownsampleLTTB.h  NoiseGeneratorWidget.h  README.md  SoundClientInfoWidget.cpp  SoundClientInfoWidget.h  SoundControlWidget.cpp  SoundControlWidget.h  SoundGeneratorWidget.h  SoundSetupDisplayWidget.cpp  SoundSetupDisplayWidget.h  SoundSetupWidgets.h  ToneGeneratorWidget.cpp  ToneGeneratorWidget.h  WaveformAxis.h  WaveformPlotWidget.cpp  WaveformPlotWidget.h  WaveformScopeWidget.cpp  WaveformScopeWidget.h  imsound.h
include/: ImSoundClientInfoWidget.h  ImSoundControlWidget.h  ImSoundControlWidgetUi.h  ImSoundGeneratorWidget.h  ImSoundNoiseGeneratorWidget.h  ImSoundSetupDisplayWidget.h  ImSoundSetupWidgets.h  ImSoundToneGeneratorWidget.h  ImSoundWaveformPlotWidget.h  ImSoundWaveformScopeWidget.h  NoiseGeneratorWidget.h  SoundGeneratorWidget.h  SoundSetupDisplayWidget.h  SoundSetupWidgets.h  ToneGeneratorWidget.h  WaveformAxis.h  WaveformScopeWidget.h
src/: ImSoundClientInfoWidget.cpp  ImSoundControlWidget.cpp  ImSoundSetupDisplayWidget.cpp  ImSoundToneGeneratorWidget.cpp  ImSoundWaveformPlotWidget.cpp  ImSoundWaveformScopeWidget.cpp  SoundClientInfoWidget.cpp  SoundControlWidget.cpp  ToneGeneratorWidget.cpp  WaveformPlotWidget.cpp
